--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="Viewport" content="width=device-width, initial-scale=1.0 maximum-scale=1.0">
-    <title>Landing Page</title>
+    <title>Projeto Responsivo</title>
     <link rel="stylesheet" type="text/css" href="style/style.css">
 
 </head>
